# cpp-yandex-coursera

./: CMakeLists.txt  README.md
cpp-yandex-03-red/: CMakeLists.txt
cpp-yandex-03-red/airport_counter/: CMakeLists.txt  airport_counter.cpp
cpp-yandex-03-red/server_stats/: CMakeLists.txt  stats.h
cpp-yandex-03-red/stack_vector/: CMakeLists.txt
cpp-yandex-03-red/text_editor/: CMakeLists.txt  text_editor.cpp
cpp-yandex-03-red/translator/: translator.cpp
cpp-yandex-03-red/week_4/server_stats/: CMakeLists.txt  server_stats.cpp  stats.cpp  stats.h
cpp-yandex-03-red/week_4/stack_vector/: stack_vector.h
cpp-yandex-03-red/week_4/text_editor/: text_editor.cpp
cpp-yandex-03-red/week_4/translator/: CMakeLists.txt
cpp-yandex-03-red/week_5/: CMakeLists.txt
cpp-yandex-03-red/week_5/concurrent_map/: CMakeLists.txt  concurrent_map.cpp
cpp-yandex-03-red/week_5/explore_key_words/: CMakeLists.txt  explore_key_words.cpp
cpp-yandex-03-red/week_5/group_heavy_strings/: CMakeLists.txt  group_heavy_strings.cpp
cpp-yandex-03-red/week_5/josephus_permutation/: CMakeLists.txt  josephus_permutation.cpp
cpp-yandex-03-red/week_5/matrix_sum/: CMakeLists.txt  matrix_sum.cpp
cpp-yandex-03-red/week_5/merge_sort_3/: CMakeLists.txt  merge_sort_3.cpp
cpp-yandex-03-red/week_5/priority_collection_2/: CMakeLists.txt  priority_collection_2.cpp
cpp-yandex-03-red/week_5/simple_vector_2/: CMakeLists.txt  simple_vector_2.h
cpp-yandex-03-red/week_5/simple_vector_copy_assignment/: CMakeLists.txt  simple_vector.h
cpp-yandex-03-red/week_5/split_into_sentences/: CMakeLists.txt  split_into_sentences.cpp
cpp-yandex-03-red/week_5/synchronized/: CMakeLists.txt  synchronized.cpp
cpp-yandex-03-red/week_6/: CMakeLists.txt
cpp-yandex-03-red/week_6/course_project_first_part/: CMakeLists.txt  main.cpp  search_server.cpp  search_server.h
cpp-yandex-03-red/week_6/course_project_second_part/: CMakeLists.txt  main.cpp  parse.cpp  search_server.cpp  search_server.h
cpp-yandex-04-brown/: CMakeLists.txt
cpp-yandex-04-brown/week_1/: CMakeLists.txt
cpp-yandex-04-brown/week_1/hash_person/: CMakeLists.txt  hash_person.cpp
cpp-yandex-04-brown/week_1/hash_point/: CMakeLists.txt  hash_point.cpp
cpp-yandex-04-brown/week_1/hash_set/: CMakeLists.txt  hash_set.cpp
cpp-yandex-04-brown/week_1/secondary_index/: CMakeLists.txt  secondary_index.cpp
cpp-yandex-04-brown/week_1/set_iterator_next/: CMakeLists.txt  set_iterator_next.cpp
cpp-yandex-04-brown/week_2/: CMakeLists.txt
cpp-yandex-04-brown/week_2/comment_server/: CMakeLists.txt  comment_server.cpp
cpp-yandex-04-brown/week_2/game_object/: CMakeLists.txt  collide.cpp
cpp-yandex-04-brown/week_2/ini/: .ini.cpp.swp  CMakeLists.txt  ini.cpp  ini.h  test_ini.cpp
cpp-yandex-04-brown/week_2/refactoring/: CMakeLists.txt  refactoring.cpp
cpp-yandex-04-brown/week_2/spendings_json/: CMakeLists.txt  spendings_json.cpp
cpp-yandex-04-brown/week_2/spendings_xml/: CMakeLists.txt  spendings_xml.cpp
cpp-yandex-04-brown/week_3/: CMakeLists.txt
cpp-yandex-04-brown/week_4/: CMakeLists.txt
cpp-yandex-04-brown/week_5/: CMakeLists.txt
cpp-yandex-04-brown/week_6/: CMakeLists.txt
cpp-yandex-05-black/: CMakeLists.txt
cpp-yandex-05-black/week_1/: CMakeLists.txt
cpp-yandex-05-black/week_1/bad_domain_san/: CMakeLists.txt
cpp-yandex-05-black/week_1/budget_san/: CMakeLists.txt  budget_san.cpp
cpp-yandex-05-black/week_1/transport_guide_E_san/: CMakeLists.txt  router.h
cpp-yandex-05-black/week_1/transport_guide_G/: CMakeLists.txt  descriptions.cpp  descriptions.h  graph.h  main.cpp  map_renderer.cpp  map_renderer.h  requests.h  sphere_projection.h  transport_router.h  utils.cpp  utils.h
cpp-yandex-05-black/week_1/transport_guide_H/: CMakeLists.txt  descriptions.cpp  json.cpp  map_renderer.cpp  map_renderer.h  requests.cpp  svg.cpp  transport_catalog.cpp  transport_catalog.h
cpp-yandex-05-black/week_1/transport_guide_I/: CMakeLists.txt  descriptions.h  json.h  main.cpp  map_renderer.cpp  map_renderer.h  sphere_projection.cpp  svg.h  transport_router.cpp
cpp-yandex-05-black/week_2/: CMakeLists.txt
utils/: test_runner.h
(+72 files in other folders)
